--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-  
 <!DOCTYPE html>
 <html lang = "en">
 <head>
 	<meta charset = "UTF-8" />
-	<title>Laura Rios's Index WEB115 class / Web Markup and Scripting!</title>
+	<title>Laura Rios's Index web115 class</title>
 </head>  
 <body>  
-Hi my name is Laura Rios and I am student of Web Programing. This is my Index page.
+Hi my name is Laura Rios and I am student of Web Technology. This is my Index page.
 </body>
 </html>
