--- a/index.html
+++ b/index.html
@@ -2,9 +2,49 @@
 <html lang = "en">
 <head>
 	<meta charset = "UTF-8" />
-	<title>Laura Rios's Index web115 class</title>
-</head>  
-<body>  
-Hi my name is Laura Rios and I am student of Web Technology. This is my Index page.
+	<title>Laura Rios // WEB115// Index</title>
+	<link rel = "stylesheet" href = "styles/brand.css" />
+</head>
+<body>
+<header>
+		<a href="images/logo.jpg">
+		<img src="images/logo.jpg" width="400" alt="360 logo" />
+		</a>
+		<nav>
+		<a href="toc.html">Home  //</a>
+		<a href="introduction.html">Introduction  //</a>
+		<a href="contract.html">Contract  //</a>
+		<a href="brand.html">Brand</a>
+		<a href="swtl-1-10.html">swtl</a>
+		</nav>
+</header>
+<main>
+        <h2>Index</h2>
+		Hi my name is Laura Rios and I am student of Web Technology. This is my Index page.
+		<br>		
+		Signed: Laura Rios, 08/28/2022 
+		<br>
+</main>
+<footer> 
+	<p>		    
+		    <a href="https://github.com/lrios002" target="_blank">github</a>
+		 // <a href="https://lrios002.github.io/" target="_blank">githubpages</a>
+		 // <a href="https://www.linkedin.com/in/laura-rios-1b918a28/" target="_blank">linkedln</a>
+		 // <a href="https://www.codecademy.com/lrios002" target="_blank">codecademy</a>
+		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
+		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
+	</p>
+	<a href="https://validator.w3.org/nu/https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fweb115%2Fcontract">
+		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
+			 style="border:0;width:88px;height:31px;" />
+	</a>
+	   
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
+		<img style="border:0;width:88px;height:31px"
+			src="images/css_validation_button.gif" alt="Check CSS validation!" />
+	</a>
+		
+	<p>&copy; Laura Rios 2022</p>
+</footer>
 </body>
 </html>
