--- a/contract.html
+++ b/contract.html
@@ -2,46 +2,53 @@
 <html lang = "en">
 <head>
 	<meta charset = "UTF-8" />
-	<title>Laura Rios // WEB115 // Contract</title>
+	<title>Laura Rios // WEB115// Course Contract</title>
 	<link rel = "stylesheet" href = "styles/brand.css" />
 </head>
 <body>
 <header>
-<h1>My Contract</h1>
+		<a href="images/logo.jpg">
+		<img src="images/logo.jpg" width="400" alt="360 logo" />
+		</a>
+		<nav>
+		<a href="toc.html">Home  //</a>
+		<a href="introduction.html">Introduction  //</a>
+		<a href="contract.html">Contract  //</a>
+		<a href="brand.html">Brand</a>
+		</nav>
 </header>
 <main>
-		I, <a href="introduction.html"> Laura Rios </a>agree to abide by the terms in my Fall 2021 - WEB115-N801 - Web Development Tools with my instructor, professor D.I. von Briesen.
+        <h2>Contract</h2>
+		I, <a href="introduction.html"> Laura Rios </a>agree to abide by the terms in my Fall 2022, WEB115-N801, Web Markup & Scripting with my instructor, professor D.I. von Briesen.
 		<br>		
-		I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, 
+		I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, 
 		or that I wish to keep private.
 		<br>
 		I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.
 		<br>
-        Signed: Laura Rios, 08/23/2021 
+        Signed: Laura Rios, 08/28/2022 
 		<br>
 </main>
 <footer> 
 	<p>		    
-		 // <a href="https://github.com/lrios002" target="_blank">github</a>
+		    <a href="https://github.com/lrios002" target="_blank">github</a>
 		 // <a href="https://lrios002.github.io/" target="_blank">githubpages</a>
 		 // <a href="https://www.linkedin.com/in/laura-rios-1b918a28/" target="_blank">linkedln</a>
 		 // <a href="https://www.codecademy.com/lrios002" target="_blank">codecademy</a>
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
-		 // <a href="https://www.khanacademy.org/profile/kaid_996396472260747114005794/courses" target="_blank">khan academy</a>
-		 // <a href="https://profile.edx.org/u/lrios002" target="_blank">edx.org</a>
 	</p>
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2Flrios002%2Fweb115.io%2Fblob%2Fmain%2Fcontract.html">
+	<a href="https://validator.w3.org/nu/https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fweb115%2Fcontract">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
 	   
-	<a href="http://jigsaw.w3.org/css-validator/check/referer">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img style="border:0;width:88px;height:31px"
 			src="images/css_validation_button.gif" alt="Check CSS validation!" />
 	</a>
 		
-	<p>&copy; Laura Rios 2021</p>
+	<p>&copy; Laura Rios 2022</p>
 </footer>
 </body>
 </html>
