--- a/contract.html
+++ b/contract.html
@@ -3,20 +3,21 @@
 <head>
 	<meta charset = "UTF-8" />
 	<title>Laura Rios // WEB115// Course Contract</title>
-	<link rel = "stylesheet" href = "styles/brand.css" />
+	<link rel = "stylesheet" href = "styles/default.css" />
 </head>
 <body>
-<header>
+	<header>
 		<a href="images/logo.jpg">
 		<img src="images/logo.jpg" width="400" alt="360 logo" />
 		</a>
 		<nav>
-		<a href="toc.html">Home  //</a>
+		<a href="index.html">Home  //</a>
 		<a href="introduction.html">Introduction  //</a>
 		<a href="contract.html">Contract  //</a>
-		<a href="brand.html">Brand</a>
+		<a href="brand.html">Brand //</a>
+		<a href="swtl-l-10.html">Swtl(1-10) //</a>
 		</nav>
-</header>
+	</header>
 <main>
         <h2>Contract</h2>
 		I, <a href="introduction.html"> Laura Rios </a>agree to abide by the terms in my Fall 2022, WEB115-N801, Web Markup & Scripting with my instructor, professor D.I. von Briesen.
@@ -38,7 +39,7 @@
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
 	</p>
-	<a href="https://validator.w3.org/nu/https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fweb115%2Fcontract">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
