--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
 	<meta charset = "UTF-8" />
 	<title>Laura Rios // WEB115// Index</title>
-	<link rel = "stylesheet" href = "styles/brand.css" />
+	<link rel = "stylesheet" href = "styles/default.css" />
 </head>
 <body>
-<header>
+	<header>
 		<a href="images/logo.jpg">
 		<img src="images/logo.jpg" width="400" alt="360 logo" />
 		</a>
 		<nav>
-		<a href="toc.html">Home  //</a>
+		<a href="index.html">Home  //</a>
 		<a href="introduction.html">Introduction  //</a>
 		<a href="contract.html">Contract  //</a>
-		<a href="brand.html">Brand</a>
-		<a href="swtl-1-10.html">swtl</a>
+		<a href="brand.html">Brand //</a>
+		<a href="swtl-l-10.html">Swtl(1-10) //</a>
 		</nav>
-</header>
+	</header>
 <main>
         <h2>Index</h2>
 		Hi my name is Laura Rios and I am student of Web Technology. This is my Index page.
@@ -34,7 +34,7 @@
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
 	</p>
-	<a href="https://validator.w3.org/nu/https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fweb115%2Fcontract">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
