--- a/brand.html
+++ b/brand.html
@@ -3,20 +3,21 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Laura Rios - WEB115 - The brand Guide of "Live 360"</title>
-	<link rel = "stylesheet" href = "styles/brand.css" />
+	<link rel = "stylesheet" href = "styles/default.css" />
 </head>
 <body>
-<header>
+	<header>
 		<a href="images/logo.jpg">
 		<img src="images/logo.jpg" width="400" alt="360 logo" />
 		</a>
 		<nav>
-		<a href="toc.html">Home  //</a>
+		<a href="index.html">Home  //</a>
 		<a href="introduction.html">Introduction  //</a>
 		<a href="contract.html">Contract  //</a>
-		<a href="brand.html">Brand</a>
+		<a href="brand.html">Brand //</a>
+		<a href="swtl-l-10.html">Swtl(1-10) //</a>
 		</nav>
-</header>
+	</header>
 <main>
       	<h2>Brand Guide</h2>
 		<br>
@@ -59,12 +60,12 @@
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
 	</p>
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2Flrios002%2Fweb115.io%2Fblob%2Fmain%2Fbrand.html#file">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
 	   
-	<a href="http://jigsaw.w3.org/css-validator/check/referer">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img style="border:0;width:88px;height:31px"
 			src="images/css_validation_button.gif" alt="Check CSS validation!" />
 	</a>
