--- a/introduction.html
+++ b/introduction.html
@@ -3,20 +3,21 @@
 <head>
 	<meta charset = "UTF-8" />
 	<title>Laura Rios // WEB150 // Introduction</title>
-	<link rel = "stylesheet" href = "styles/brand.css" />
+	<link rel = "stylesheet" href = "styles/default.css" />
 </head>
 <body>
-<header>
-	    <a href="images/logo.jpg">
+	<header>
+		<a href="images/logo.jpg">
 		<img src="images/logo.jpg" width="400" alt="360 logo" />
 		</a>
 		<nav>
-		<a href="toc.html">Home  //</a>
+		<a href="index.html">Home  //</a>
 		<a href="introduction.html">Introduction  //</a>
 		<a href="contract.html">Contract  //</a>
-		<a href="brand.html">Brand</a>
+		<a href="brand.html">Brand //</a>
+		<a href="swtl-l-10.html">Swtl(1-10) //</a>
 		</nav>
-</header>
+	</header>
 <main>
         <h2>Introduction</h2>
 	    <h1><img src="images/laura1.jpg" alt = "Laura" width="200" height="300" /></h1>
@@ -59,17 +60,17 @@
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
 	</p>
-	<a href="http://validator.w3.org/check?uri=referer">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
 	   
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fintroduction#file">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img style="border:0;width:88px;height:31px"
 			src="images/css_validation_button.gif" alt="Check CSS validation!" />
 	</a>
 		
-	<p>&copy; Laura Rios 2</p>
+	<p>&copy; Laura Rios 2022</p>
 </footer>
 </body>
 </html>
