--- a/swtl-1-10.html
+++ b/swtl-1-10.html
@@ -3,13 +3,20 @@
 <head>
 	<meta charset = "UTF-8" />
 	<title>Laura Rios - WEB115 - Swtl(1-10)</title>
-	<link rel = "stylesheet" href = "styles/brand.css" />
+	<link rel = "stylesheet" href = "styles/default.css" />
 </head>
 <body>
-    <header>
-       <a href="images/logo.jpg">
+	<header>
+		<a href="images/logo.jpg">
 		<img src="images/logo.jpg" width="400" alt="360 logo" />
-	   </a>
+		</a>
+		<nav>
+		<a href="index.html">Home  //</a>
+		<a href="introduction.html">Introduction  //</a>
+		<a href="contract.html">Contract  //</a>
+		<a href="brand.html">Brand //</a>
+		<a href="swtl-l-10.html">Swtl(1-10) //</a>
+		</nav>
     </header>
 <main>
 		<h2>WEB115 Smarter way to learn Js Chapter 1-10</h2>
@@ -38,26 +45,24 @@
 </main>
 <footer> 
 	<p>		    
-		 // <a href="https://github.com/lrios002" target="_blank">github</a>
+		    <a href="https://github.com/lrios002" target="_blank">github</a>
 		 // <a href="https://lrios002.github.io/" target="_blank">githubpages</a>
 		 // <a href="https://www.linkedin.com/in/laura-rios-1b918a28/" target="_blank">linkedln</a>
 		 // <a href="https://www.codecademy.com/lrios002" target="_blank">codecademy</a>
 		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
 		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
-		 // <a href="https://www.khanacademy.org/profile/kaid_996396472260747114005794/courses" target="_blank">khan academy</a>
-		 // <a href="https://profile.edx.org/u/lrios002" target="_blank">edx.org</a>
 	</p>
-	<a href="hthttps://validator.w3.org/nu/?doc=https%3A%2F%2Fgithub.com%2Flrios002%2Fweb115.io%2Fblob%2Fmain%2Fswtl-1-10.html.#file">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
 	</a>
 	   
-	<a href="http://jigsaw.w3.org/css-validator/check/referer">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
 		<img style="border:0;width:88px;height:31px"
 			src="images/css_validation_button.gif" alt="Check CSS validation!" />
 	</a>
 		
-	<p>&copy; Laura Rios 2021</p>
+	<p>&copy; Laura Rios 2022</p>
 </footer>
 </body>
 </html>
