--- a/index.html
+++ b/index.html
@@ -7,43 +7,36 @@
 </head>
 <body>
 	<header>
-		<a href="images/logo.jpg">
-		<img src="images/logo.jpg" width="400" alt="360 logo" />
-		</a>
-		<nav>
-		<a href="index.html">Home  //</a>
-		<a href="introduction.html">Introduction  //</a>
-		<a href="contract.html">Contract  //</a>
-		<a href="brand.html">Brand //</a>
-		<a href="swtl-l-10.html">Swtl(1-10) //</a>
-		</nav>
+		<h1>Laura Rios' Home Page</h1>
 	</header>
 <main>
         <h2>Index</h2>
-		Hi my name is Laura Rios and I am student of Web Technology. This is my Index page.
-		<br>		
+		<p>
+			Hi my name is Laura Rios and I am student of Web Technology. This is my Home page.
+		</p>
+		
+		<p>
+		<a href ="web115/index.html">Go to my WEB115 Course.</a>
+		</p>	
+		<p>
 		Signed: Laura Rios, 08/28/2022 
-		<br>
+		</p>	
+		
 </main>
 <footer> 
-	<p>		    
-		    <a href="https://github.com/lrios002" target="_blank">github</a>
-		 // <a href="https://lrios002.github.io/" target="_blank">githubpages</a>
-		 // <a href="https://www.linkedin.com/in/laura-rios-1b918a28/" target="_blank">linkedln</a>
-		 // <a href="https://www.codecademy.com/lrios002" target="_blank">codecademy</a>
-		 // <a href="https://www.freecodecamp.org/lrios0002" target="_blank">freecodecamp</a>
-		 // <a href="https://jsfiddle.net/lrios002/3oz9ncba/4/" target="_blank">JSfiddle</a>
-	</p>
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
+	  
+		
+	<p>
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
 			 style="border:0;width:88px;height:31px;" />
-	</a>
+	</a
 	   
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Fcontract#file">
+	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
 		<img style="border:0;width:88px;height:31px"
 			src="images/css_validation_button.gif" alt="Check CSS validation!" />
 	</a>
-		
+	</p>	
 	<p>&copy; Laura Rios 2022</p>
 </footer>
 </body>
