--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<meta charset = "UTF-8" />
+	<meta charset = "UTF-8">
 	<title>Laura Rios // WEB115// Index</title>
-	<link rel = "stylesheet" href = "styles/default.css" />
+	<link rel = "stylesheet" href = "styles/default.css">
 </head>
 <body>
 	<header>
@@ -29,12 +29,12 @@
 	<p>
 	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
 		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
-			 style="border:0;width:88px;height:31px;" />
+			 style="border:0;width:88px;height:31px;">
 	</a
 	   
 	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
 		<img style="border:0;width:88px;height:31px"
-			src="images/css_validation_button.gif" alt="Check CSS validation!" />
+			src="images/css_validation_button.gif" alt="Check CSS validation!">
 	</a>
 	</p>	
 	<p>&copy; Laura Rios 2022</p>
