--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang = "en">
 <head>
-	<meta charset = "UTF-8">
-	<title>Laura Rios // WEB115// Index</title>
-	<link rel = "stylesheet" href = "styles/default.css">
+	<meta charset = "UTF-8" >
+	<title>Laura Rios // WEB215 // Table of Contents</title>
+	<link rel = "stylesheet" href = "styles/brand.css" >
 </head>
 <body>
-	<header>
-		<h1>Laura Rios' Home Page</h1>
-	</header>
+<div data-include="components/header.html"></div>   	
 <main>
-        <h2>Index</h2>
-		<p>
-			Hi my name is Laura Rios and I am student of Web Technology. This is my Home page.
-		</p>
-		
-		<p>
-		<a href ="web115/index.html">Go to my WEB115 Course.</a>
-		</p>	
-		<p>
-		Signed: Laura Rios, 08/28/2022 
-		</p>	
-		
+        <h2>Welcome Laura Rios Records Manegement!</h2>
+	     	
+		<ul>
+			<li><a href="./web215/">WEB215</a></li>
+		</ul>		
 </main>
-<footer> 
-	  
-		
-	<p>
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
-		<img src="images/html_validation_button.gif"  alt="Check HTML 5 validation!" 
-			 style="border:0;width:88px;height:31px;">
-	</a
-	   
-	<a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Flrios002.github.io%2Findex.html">
-		<img style="border:0;width:88px;height:31px"
-			src="images/css_validation_button.gif" alt="Check CSS validation!">
-	</a>
-	</p>	
-	<p>&copy; Laura Rios 2022</p>
-</footer>
+<div data-include="components/footer.html"></div>
+<script src="scripts/include.js"></script>
 </body>
 </html>
