--- a/web215/index.html
+++ b/web215/index.html
@@ -8,7 +8,7 @@
 <body>
 <div data-include="components/header.html"></div>   	
 <main>
-        <h2>Welcome to Live 360!</h2>
+        <h2>Welcome Laura Rios Records Management!</h2>
 	     	
 		<ul>
 			<li><a href="contract.html">Contract</a></li>
