--- a/web215/brand.html
+++ b/web215/brand.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<meta charset="UTF-8" >
-	<title>Laura Rios - WEB215 - The brand Guide of "Laura Rios Records Management"</title>
+	<title>WEB215 // Laura Rios Records Management // Brand</title>
 	<link rel = "stylesheet" href = "styles/brand.css" >
 </head>
 <body>
