--- a/web215/contract.html
+++ b/web215/contract.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
 	<meta charset = "UTF-8" >
-	<title>Laura Rios // WEB215// Course Contract</title>
+	<title>WEB215 // Laura Rios Records Management // Contract</title>
 	<link rel = "stylesheet" href = "styles/brand.css" >
 </head>
 <body>
