--- a/web215/index.html
+++ b/web215/index.html
@@ -14,6 +14,8 @@
 			<li><a href="contract.html">Contract</a></li>
 			<li><a href="introduction.html">Introduction</a></li>
 		    <li><a href="brand.html">My Brand</a></li>
+			<li><a href="introductionform.html">Introduction Form</a></li>
+
 		</ul>		
 </main>
 <div data-include="components/footer.html"></div>
