--- a/web215/introductionform.html
+++ b/web215/introductionform.html
@@ -48,5 +48,6 @@
 </main>
 <div data-include="components/footer.html"></div>
 <script src="scripts/include.js"></script>
+<script src="scripts/introductionform.js"></script>
 </body>
 </html>
