--- a/web215/introductionform.html
+++ b/web215/introductionform.html
@@ -25,7 +25,7 @@
   </form>
   <form>
       <label for="firstQuestion">Personal background: </label><br>
-      <input type="text" id="firstQuestion" name="firstQuestion" value="I am 46 years old. I was born in Caracas, the capital of Venezuela and my parents are from Spain. 
+      <input type="text" id="firstQuestion" name="firstQuestion" value="I am 47 years old. I was born in Caracas, the capital of Venezuela and my parents are from Spain. 
 		I moved to Charlotte six years ago to improve my English and to start a new future in this lovely country."><br>
       <label for="secondQuestion">Professional background: </label><br>
       <input type="text" id="secondQuestion" name="secondQuestion" value="I have a bachelor and specialization in Document Science"><br>
@@ -35,7 +35,7 @@
       <label for="fourthQuestion">Primary computer platform: </label><br>
       <input type="text" id="fourthQuestion" name="fourthQuestion" value="HP, Windows 10."><br>
       <label for="fifthQuestion">Courses taking: </label><br>
-      <input type="text" id="fifthQuestion" name="fifthQuestion" value="WEB 115, AST 111, POL 135 and ACA 122"><br>
+      <input type="text" id="fifthQuestion" name="fifthQuestion" value="WEB 215"><br>
       <label for="sixthQuestion">Something to remember me by: </label><br>
       <input type="text" id="sixthQuestion" name="sixthQuestion" value="I have a philosophy: Life is so short, you have to work but enjoy life and the moments!"><br>
       <label for="seventhQuestion">I'd like to share: </label><br>
